# learning-wasm

./: .gitignore  Cargo.toml  dump.js  readme.md  rustfmt.toml  test
src/: lib.rs
src/binary/: decode.rs  encode.rs  errors.rs  instruction.rs  leb128.rs  mod.rs  module.rs  reader.rs  section.rs  types.rs  validate.rs
src/execution/: errors.rs  importer.rs  mod.rs  types.rs  value.rs  vm.rs
src/execution/inst/: element.rs  function.rs  global.rs  memory.rs  mod.rs  table.rs
src/execution/instr/: control.rs  exec.rs  memory.rs  mod.rs  numeric.rs  parametric.rs  reference.rs  table.rs  trunc_sat.rs  variable.rs  vector.rs
src/execution/stack/: frame.rs  mod.rs  operand.rs
tests/: spec.rs  walk.py  wast2json
