[package]
name = "wasm"
version = "0.1.0"
authors = ["ecuplxd"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

[dev-dependencies]
paste = "1.0.14"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.108"

[profile.dev]
overflow-checks = false

[profile.release]
panic = 'abort'
lto = true
incremental = true
